# audit

./: DEFAI_CONTRACTS.md  PQC_RETROFIT_DOCUMENTATION.md  ZCASH_PRIVACY_IMPLEMENTATION.md  defai_swap.fc  defai_swap.spec.ts  defai_swap_wrapper.ts  package.json  test_runner.js  tsconfig.json
security-auditor/: Anchor.toml  Cargo.toml  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_SUMMARY.md  DEV_DOCS.md  ESTATE_AUDIT_FIX.md  FEATURE_REMOVAL_OPTIONS.md  FINAL_DEPLOYMENT_SUMMARY.md  INTEGRATION_GUIDE.md  TOKEN_COMPATIBILITY_REPORT.md  VRFInit.md  defai_swap_v2_keypair.json  fix-symbols.py  init-deployed-programs.js  init-deployed-simple.js  remove-old-vrf.sh  simple-vrf-test.js  test-deploy.json  test-program-id.json  test-vrf-init.js
security-auditor/.cargo/: config.toml
security-auditor/contracts/: MockERC20.sol
security-auditor/defai_app_factory/: .env.example  .gitignore  AppFactory_service.md  DEPLOYED_CONTRACTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FIXES_SUMMARY.md  README_SOLIDITY.md  README_TON.md  defai_app_factory.fc  defai_app_factory_wrapper.ts  deploy.js  hardhat.config.js  jest.config.js  package.json  ton-package.json  tsconfig.json
security-auditor/defai_estate/: .env.example  BASE_SEPOLIA_DEPLOYMENT.md  DEFAI_ESTATE_OVERVIEW.md  DEPLOYED_CONTRACTS.md  EMERGENCY_LOCK_FIXED.md  EMERGENCY_LOCK_IMPROVEMENTS.md  README.md  README_SOLIDITY.md  VolInt.md  audit-report.json  echidna.yaml  hardhat.config.js  package-lock.json  package.json
security-auditor/defai_staking/: .gitignore  README_TON.md  defai_jetton_handler.fc  defai_staking.fc  deploy.fif  (+5 more)
(+182 files in other folders)
