[workspace]
members = [
    "defai_swap",
    "defai_staking",
    "defai_estate",
    "defai_app_factory"
]
exclude = [
    "programs/.claude",
    "programs/security-auditor",
    "programs/security-audit",
    "programs/archive_backups"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug = false
rpath = false
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token_2022"] }
solana-program = "1.17.0"

